footer fixed for horizontal display on small devices

--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@
     src: url(fonts/Neon.ttf)
 }
 
+@font-face {
+    font-family: disco-diva;
+    src: url(fonts/DiscoDiva.ttf)
+}
+
 :root {
     scroll-behavior: smooth;
 }
@@ -117,7 +122,7 @@ a:hover {
     }
 }
 
-  @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     footer {
         grid-template-columns: 1fr 1fr;
     }
@@ -135,5 +140,15 @@ a:hover {
     .copyright {
         grid-column: 1 / 3;
         grid-row: 2 / 3;
+    }
+}
+
+@media screen and (max-height: 574px) {
+    #contact {
+        min-height: calc(55vh - 70px);
+    }
+
+    footer {
+        height: 45vh;
     }
 }
